20100225  Thu Feb 25 23:09:15 PST 2010
  Bugs
  * Accidentally left a debugging print in mktime()

  Tests
  * Test against 2006, before the American DST rules changed, so
    as not to break on old machines.


20100223  Tue Feb 23 11:57:23 PST 2010
  Build
  * Fix for JSON.pm not being available for Build.PL


20100218  Thu Feb 18 12:29:49 PST 2010
  * No changes since the last alpha

  Summary of Changes Since The Last Stable

  Improvements
  * System mktime() is now probed giving more accurate
    mktime() on 64 bit systems.

  Test
  * Test fixes for 64 bit machines, OS X, BSD, people in the UK

  Build
  * Build fixes Versions of Visual C++ lacking long long
  * Build fixes for Strawberry and any system with a time.h
    limit of 0.
  * Build fixes for slightly out of date Module::Build


20100216.1421_04  Tue Feb 16 14:22:08 PST 2010
  Build
  * Switch dependency on JSON::XS to just JSON to eliminate
    Lehmann-ware dependency.
  * The test for the limits of the time.h did not work for
    finding functions.
  * Work around bug in OS X 10.6 where gmtime() would be wrong
    before -70546986201600.

  Test
  * Add some more fuzz around the future localtime() tests.


20100214.1823_03  Sun Feb 14 18:23:22 PST 2010
  Build
  * Bump up the minimum Module::Build release to fix a bug where
    Build would not see inc/ and thus couldn't find
    Local::Module::Build.


20100213.0504_02  Sat Feb 13 05:04:39 PST 2010
  Build
  * The check for the minimum time and date was broken and would only
    do a single check.


20100213.0000_01  Sat Feb 13 04:32:59 PST 2010
  Improvements
  * mktime() and timelocal() will now make better use of the system
    functions giving better accuracy.

  Build
  * Had too old a version of Module::Build listed as the requirement.
  * The limit check program was ignoring a limit of 0.  Duh.
  * Fix so the check_max program is not always re-run on Cygwin.

  Tests
  * More localtime() tests to track down the 64 bit issues