@@ -11,7 +11,7 @@ build_requires:
   Test::Warn: 0.11
 configure_requires:
   Module::Build: 0.36
-generated_by: 'Module::Build version 0.3601'
+generated_by: 'Module::Build version 0.3603'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -20,12 +20,12 @@ name: Time-y2038
 provides:
   Time::y2038:
     file: lib/Time/y2038.pm
-    version: 20100225
+    version: 20100403
   Time::y2038::Everywhere:
     file: lib/Time/y2038/Everywhere.pm
-    version: 20100225
+    version: 20100403
 requires:
   perl: v5.6.1
 resources:
   license: http://dev.perl.org/licenses/
-version: 20100225
+version: 20100403
