@@ -15,29 +15,30 @@ not run its Makefile.PL or Build.PL.
 Hash: SHA1
 
 SHA1 4d4b9fe7a9836ea619fbc68874efa7d7e6d60cd2 Build.PL
-SHA1 ba2cd06b37426fbe4f35abb48450892d0ba479b7 Changes
+SHA1 3b29b365a4cdf942f0eab9d537c0d93dd2007611 Changes
 SHA1 fb110d0098fa623a2d6566e86a6d630110f60d23 INSTALL
-SHA1 0abcc59e081d5fa311e6b18c24f94a4f0a3d47b9 MANIFEST
+SHA1 3170f39a524774094b99997ef580a9760a3d7757 MANIFEST
 SHA1 b42c7cde42d44221603a84f6bdfeb4a6005604e5 MANIFEST.SKIP
-SHA1 4ad2939ae908ea735239fd0fb15e0afa6992fbdd META.yml
+SHA1 2df76dbe03a63cc8164fb816b328cf0235239e5e META.yml
 SHA1 d2f3d11e9f7f0fd886b47f9257352eb8b71bf4a8 check_max.c
-SHA1 f952a76c3122bcb434c86e606583b11fd1bd3f4a inc/Local/Module/Build.pm
-SHA1 46655ecd65fdca0fe725979a4a0c0e209c5ed8a6 lib/Time/y2038.pm
-SHA1 666e25e498a3bd6bdb9bcab3f9e5b8812e4567f3 lib/Time/y2038.xs
-SHA1 733537345b80d2edba102212d2591b24a7a8581a lib/Time/y2038/Everywhere.pm
+SHA1 21842315e5b12aac383ea48aa10a41a7ab95787d inc/Local/Module/Build.pm
+SHA1 f2cee8c7a7fd7e6422c19727ec5258e359b09803 lib/Time/y2038.pm
+SHA1 ddd3ef1934b37a4fe1644f8045a775a30278df72 lib/Time/y2038.xs
+SHA1 ad65a95fd786d4c53c453ee42055175a63dc080c lib/Time/y2038/Everywhere.pm
 SHA1 6c52173a196e81890474ea47f31ba2aeb3b7939c munge_config
 SHA1 1fa62ec9022c346fa26bf94652114e38b5efc5f0 t/everywhere.t
+SHA1 76efef2e7c55a7e351c62e44820f0f87b64d85a1 t/localtimetz.t
 SHA1 53f53a00f22f19b5f16d7801e730e57c173f61c7 t/time.t
 SHA1 851b9264b863b168ed07d17720e0176a0fe67d7c t/timegm.t
 SHA1 a915486e0da8713dead77ca21d041c8ae6b6676e typemap
-SHA1 e05084cdf3b64b4fa9883a41aefaa5b3d3e21407 y2038/time64.c
+SHA1 b84518ded0b1ab0d30107cb4d4002bfa64757bff y2038/time64.c
 SHA1 0d7cf54304f41d3dbfd803d597c29d62b845ce2a y2038/time64.h
 SHA1 015c751b69ae7971c626034ad2b27eaabe5a76a7 y2038/time64_config.h.in
-SHA1 0f73eae859e4709f30194d5e989487ffa7fd28d2 y2038/time64_limits.h.in
+SHA1 95314ecad677f573bf33bbb3c4b70d8880f15975 y2038/time64_limits.h.in
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.13 (Darwin)
 
-iEYEARECAAYFAkuHdCAACgkQWMohlhD1QyctMgCgwOvJ+LFEFcmCG9snFxnjCDcR
-iPIAoL6Mv3P9NX1xGeSYJKtRswLUH87m
-=xaTK
+iEYEARECAAYFAku4BwEACgkQWMohlhD1QydTmgCg0dkZK9ux6iP9/KLwbhW+G2AA
+9pUAn2dkAgtjHD2DN/UQSjAvPnLY6o5a
+=cNQs
 -----END PGP SIGNATURE-----
