@@ -1,3 +1,14 @@
+20100403  Sat Apr  3 20:25:49 PDT 2010
+  Build
+  * Add a timeout to the system time.h limit check for systems that
+    hang when you try times too large. [rt.cpan.org 40764]
+
+  Bugs
+  * strict compilers, like Sun's cc, would error because we passed
+    too many elements to the tm struct.  [rt.cpan.org #55225]
+  * Ensure localtime() honors the TZ environment variable.
+
+
 20100225  Thu Feb 25 23:09:15 PST 2010
   Bugs
   * Accidentally left a debugging print in mktime()
